Fix: fix navigation mobile interface

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -31,6 +31,7 @@
 	font-weight: 500;
 	position: relative;
 	padding: 0.1em 0;
+	display: inline-block;
 }
 
 .mobile a::before {
@@ -75,19 +76,26 @@ div.dropdown-menu a:hover {
 	}
 
 	.mobile {
-		align-items: normal;
-		margin: 50% 4em;
-		gap: 3em;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin: 6em 0;
 	}
 
-	.mobile a,
-	div.dropdown-menu a {
-		display: block;
+	.mobile a {
 		text-align: center;
-		padding: 0;
+		padding: 0.5em 0;
 		font-size: 1.1rem;
 		font-weight: 600;
 		color: aliceblue;
+	}
+
+	.mobile a:hover {
+		color: white;
+	}
+
+	.mobile a.active {
+		padding: 0.5em 0;
 	}
 
 	.mobile a::before {
@@ -109,11 +117,12 @@ div.dropdown-menu a:hover {
 		margin: 0;
 		z-index: 5;
 	}
+
 	.donate {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		margin: 3em;
+		margin: 1em;
 	}
 
 	.donate button {
@@ -122,5 +131,20 @@ div.dropdown-menu a:hover {
 		border: none;
 		font-weight: 600;
 		font-size: 0.9rem;
+	}
+
+	.dropdown-item.active {
+		background-color: var(--primary-color) !important;
+		color: var(--secondary-color) !important;
+	}
+
+	div.dropdown-menu a {
+		margin: 0.7rem 0;
+		font-size: 0.9rem;
+	}
+
+	div.dropdown-menu a:last-child {
+		padding: 0;
+		margin: 0;
 	}
 }
