--- a/src/styles/OurTeam.css
+++ b/src/styles/OurTeam.css
@@ -1,5 +1,5 @@
 .team-header {
-	height: 45vh;
+	height: 60vh;
 	position: relative;
 }
 
